@@ -637,7 +637,7 @@ public class TestCoalMine {
         /* Wait for the courier on the road between the mint and the coal mine hut to have a coal cargo */
         Utils.waitForFlagToGetStackedCargo(map, coalMine.getFlag(), 1);
 
-        assertEquals(coalMine.getFlag().getStackedCargo().get(0).getMaterial(), COAL);
+        assertEquals(coalMine.getFlag().getStackedCargo().getFirst().getMaterial(), COAL);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -701,7 +701,7 @@ public class TestCoalMine {
 
         Utils.waitForFlagToGetStackedCargo(map, coalMine.getFlag(), 1);
 
-        assertEquals(coalMine.getFlag().getStackedCargo().get(0).getMaterial(), COAL);
+        assertEquals(coalMine.getFlag().getStackedCargo().getFirst().getMaterial(), COAL);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -715,7 +715,7 @@ public class TestCoalMine {
         Utils.fastForwardUntilWorkerReachesPoint(map, road0.getCourier(), storehouse.getFlag().getPosition());
 
         assertEquals(storehouse.getFlag().getStackedCargo().size(), 1);
-        assertTrue(storehouse.getFlag().getStackedCargo().get(0).getMaterial().equals(COAL));
+        assertTrue(storehouse.getFlag().getStackedCargo().getFirst().getMaterial().equals(COAL));
         assertNull(road0.getCourier().getCargo());
     }
 
@@ -779,7 +779,7 @@ public class TestCoalMine {
 
         Utils.waitForFlagToGetStackedCargo(map, coalMine.getFlag(), 1);
 
-        assertEquals(coalMine.getFlag().getStackedCargo().get(0).getMaterial(), COAL);
+        assertEquals(coalMine.getFlag().getStackedCargo().getFirst().getMaterial(), COAL);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -1226,7 +1226,7 @@ public class TestCoalMine {
         assertFalse(coalMine0.getFlag().getStackedCargo().isEmpty());
 
         /* Wait to let the cargo remain at the flag without any connection to the storage */
-        Cargo cargo = coalMine0.getFlag().getStackedCargo().get(0);
+        Cargo cargo = coalMine0.getFlag().getStackedCargo().getFirst();
 
         Utils.fastForward(50, map);
 
@@ -1549,7 +1549,7 @@ public class TestCoalMine {
         assertEquals(workers.size(), 1);
 
         /* Verify that the player is set correctly in the worker */
-        Miner worker = workers.get(0);
+        Miner worker = workers.getFirst();
 
         assertEquals(worker.getPlayer(), player0);
     }
@@ -2063,7 +2063,7 @@ public class TestCoalMine {
         constructHouse(coalMine0);
 
         /* Wait for a worker to start walking to the building */
-        Worker worker = Utils.waitForWorkersOutsideBuilding(Miner.class, 1, player0).get(0);
+        Worker worker = Utils.waitForWorkersOutsideBuilding(Miner.class, 1, player0).getFirst();
 
         /* Wait for the worker to get to the building's flag */
         Utils.fastForwardUntilWorkerReachesPoint(map, worker, coalMine0.getFlag().getPosition());
