@@ -720,7 +720,7 @@ public class TestFarm {
         /* Wait for the courier on the road between the mill and the farm hut to have a wheat cargo */
         Utils.waitForFlagToGetStackedCargo(map, farm.getFlag(), 1);
 
-        assertEquals(farm.getFlag().getStackedCargo().get(0).getMaterial(), WHEAT);
+        assertEquals(farm.getFlag().getStackedCargo().getFirst().getMaterial(), WHEAT);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -1164,7 +1164,7 @@ public class TestFarm {
         assertFalse(farm0.getFlag().getStackedCargo().isEmpty());
 
         /* Wait to let the cargo remain at the flag without any connection to the storage */
-        Cargo cargo = farm0.getFlag().getStackedCargo().get(0);
+        Cargo cargo = farm0.getFlag().getStackedCargo().getFirst();
 
         Utils.fastForward(50, map);
 
@@ -1481,7 +1481,7 @@ public class TestFarm {
         assertEquals(workers.size(), 1);
 
         /* Verify that the player is set correctly in the worker */
-        Farmer worker = workers.get(0);
+        Farmer worker = workers.getFirst();
 
         assertEquals(worker.getPlayer(), player0);
     }
@@ -2316,7 +2316,7 @@ public class TestFarm {
         Utils.constructHouse(farm0);
 
         /* Wait for a worker to start walking to the building */
-        Worker worker = Utils.waitForWorkersOutsideBuilding(Farmer.class, 1, player0).get(0);
+        Worker worker = Utils.waitForWorkersOutsideBuilding(Farmer.class, 1, player0).getFirst();
 
         /* Wait for the worker to get to the building's flag */
         Utils.fastForwardUntilWorkerReachesPoint(map, worker, farm0.getFlag().getPosition());
