@@ -1542,7 +1542,7 @@ public class TestForesterHut {
         assertEquals(workers.size(), 1);
 
         /* Verify that the player is set correctly in the worker */
-        Forester worker = workers.get(0);
+        Forester worker = workers.getFirst();
 
         assertEquals(worker.getPlayer(), player0);
     }
@@ -2113,7 +2113,7 @@ public class TestForesterHut {
         constructHouse(foresterHut0);
 
         /* Wait for a worker to start walking to the building */
-        Worker worker = Utils.waitForWorkersOutsideBuilding(Forester.class, 1, player0).get(0);
+        Worker worker = Utils.waitForWorkersOutsideBuilding(Forester.class, 1, player0).getFirst();
 
         /* Wait for the worker to get to the building's flag */
         Utils.fastForwardUntilWorkerReachesPoint(map, worker, foresterHut0.getFlag().getPosition());
