@@ -555,7 +555,7 @@ public class TestSawmill {
         /* Wait for the courier on the road between the guard house and the quarry hut to have a cargo */
         Utils.waitForFlagToGetStackedCargo(map, sawmill.getFlag(), 1);
 
-        assertEquals(sawmill.getFlag().getStackedCargo().get(0).getMaterial(), PLANK);
+        assertEquals(sawmill.getFlag().getStackedCargo().getFirst().getMaterial(), PLANK);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -622,7 +622,7 @@ public class TestSawmill {
 
         Utils.waitForFlagToGetStackedCargo(map, sawmill.getFlag(), 1);
 
-        assertEquals(sawmill.getFlag().getStackedCargo().get(0).getMaterial(), PLANK);
+        assertEquals(sawmill.getFlag().getStackedCargo().getFirst().getMaterial(), PLANK);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -636,7 +636,7 @@ public class TestSawmill {
         Utils.fastForwardUntilWorkerReachesPoint(map, road0.getCourier(), storehouse.getFlag().getPosition());
 
         assertEquals(storehouse.getFlag().getStackedCargo().size(), 1);
-        assertTrue(storehouse.getFlag().getStackedCargo().get(0).getMaterial().equals(PLANK));
+        assertTrue(storehouse.getFlag().getStackedCargo().getFirst().getMaterial().equals(PLANK));
         assertNull(road0.getCourier().getCargo());
     }
 
@@ -690,7 +690,7 @@ public class TestSawmill {
 
         Utils.waitForFlagToGetStackedCargo(map, sawmill.getFlag(), 1);
 
-        assertEquals(sawmill.getFlag().getStackedCargo().get(0).getMaterial(), PLANK);
+        assertEquals(sawmill.getFlag().getStackedCargo().getFirst().getMaterial(), PLANK);
 
         /* Wait for the courier to pick up the cargo */
         Utils.fastForwardUntilWorkerCarriesCargo(map, road0.getCourier());
@@ -904,7 +904,7 @@ public class TestSawmill {
         assertFalse(sawmill0.getFlag().getStackedCargo().isEmpty());
 
         /* Wait to let the cargo remain at the flag without any connection to the storage */
-        Cargo cargo = sawmill0.getFlag().getStackedCargo().get(0);
+        Cargo cargo = sawmill0.getFlag().getStackedCargo().getFirst();
 
         Utils.fastForward(50, map);
 
@@ -1304,7 +1304,7 @@ public class TestSawmill {
         assertEquals(workers.size(), 1);
 
         /* Verify that the player is set correctly in the worker */
-        SawmillWorker worker = workers.get(0);
+        SawmillWorker worker = workers.getFirst();
 
         assertEquals(worker.getPlayer(), player0);
     }
@@ -1782,7 +1782,7 @@ public class TestSawmill {
         Utils.constructHouse(sawmill0);
 
         /* Wait for a worker to start walking to the building */
-        Worker worker = Utils.waitForWorkersOutsideBuilding(SawmillWorker.class, 1, player0).get(0);
+        Worker worker = Utils.waitForWorkersOutsideBuilding(SawmillWorker.class, 1, player0).getFirst();
 
         /* Wait for the worker to get to the building's flag */
         Utils.fastForwardUntilWorkerReachesPoint(map, worker, sawmill0.getFlag().getPosition());
