@@ -130,7 +130,7 @@ public class TestWinning {
 
         assertEquals(map.getWinner(), player0);
         assertEquals(player1.getBuildings().size(), 1);
-        assertTrue(player1.getBuildings().get(0).isBurningDown());
+        assertTrue(player1.getBuildings().getFirst().isBurningDown());
     }
 
     /*
